force-app/main/default/objects/Quoteline__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <formula>ChargeQuantity__c *  BuyingListPriceFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>