force-app/main/default/objects/Quoteline__c/fields/TotalAmountofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCY__c</fullName>
    <formula>SellingListPriceFCY__c *  ChargeQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>