force-app/main/default/objects/Quoteline__c/fields/TotalBuyingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxActual__c</fullName>
    <formula>TotalAmountofBuyingActual__c  +  AmountTaxBuyingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>