force-app/main/default/objects/Quoteline__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <formula>TotalAmountofBuyingLocal__c +  TaxRateBuying__c *  ChargeQuantity__c * BuyingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying Incl Tax (VND))</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>