force-app/main/default/objects/Quoteline__c/fields/TransitTimeDays__c.field-meta.xml
<CustomField>
    <fullName>TransitTimeDays__c</fullName>
    <label>Transit Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>