force-app/main/default/objects/Quoteline__c/validationRules/PreventInquiryAndPriceOptionNull.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventInquiryAndPriceOptionNull</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(QuoteID__r.InquiryID__c))  &amp;&amp;  ISBLANK( PriceOptionID__c )</errorConditionFormula>
    <errorMessage>This quote line is not based on any Reference Price in Inquiry. Please check again!</errorMessage>
</ValidationRule>