force-app/main/default/objects/Quoteline__c/validationRules/PreventRefPriceandPriceOptionNull.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventRefPriceandPriceOptionNull</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( PriceOptionID__c)&amp;&amp; ISBLANK( ReferencePrice__c )</errorConditionFormula>
    <errorMessage>This quote line is not based on any Reference price or Price Option. Please check again!</errorMessage>
</ValidationRule>